# ai-lang-stuff

./: .env.example  .gitignore  .pre-commit-config.yaml  BATCH-PROCESSING-SUMMARY.md  CI-CD-SETUP-COMPLETE.md  CLAUDE.md  COMMIT-SUMMARY.md  DEVELOPMENT-TASKS-28.md  DEVELOPMENT.md  Dockerfile.sandbox  GITHUB-PUSH-FIX.md  IMPLEMENTATION-PLAN-2025-10-29.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH-STUDIO-QUICKSTART.md  MASTER-PLAN-SEQUENTIAL.md  Makefile  NEXT-PHASE-PLAN.md  NEXT_STEPS.md  PROGRESS-SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SANDBOXING-PLAN-2025.md  SESSION-COMPLETE.md  SESSION-REPORT-2025-10-28.md  SESSION_COMPLETE.md  SPRINT_1_RETROSPECTIVE.md  STATUS.md  TASK-COMPLETION-SUMMARY.md  langgraph.json  main.py  mkdocs.yml  package.json  pyproject.toml  requirements.txt  tool_registry.json
.claude/: SKILL-AUDIT-FINDINGS.md  settings.local.json
.claude/agents/: docs-maintainer.yaml  example-creator.md  interpretability-researcher.md  langgraph-orchestrator.md  local-model-manager.md  mcp-integration-specialist.md  orchestration-specialist.md  rag-system-builder.md  research-agent.yaml
.claude/skills/: README.md  debug-agent.md  documentation-writer.md  git-commit-organizer.md  model-comparison.md
.github/: CI-CD-QUICK-START.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  benchmarks.yml  docs.yml  lint.yml  test.yml
cli/: .gitignore  ARCHITECTURE.md  COMMANDS.md  FEATURES.md  INDEX.md  Makefile  QUICKSTART.md  README.md  STATUS.md  demo.sh  install.sh  pyproject.toml  setup.py
cli/ailang/: __init__.py  main.py
cli/ailang/commands/: __init__.py  examples.py  mcp.py  models.py  rag.py
cli/tests/: __init__.py  test_cli.py  test_commands.py
config/: .env.example  models.yaml
config/models/: deepseek-coder-33b.yaml  deepseek-coder-6.7b.yaml  deepseek-r1-8b.yaml  gemma3-12b-fp16.yaml  gemma3-3b.yaml  qwen3-30b-a3b.yaml  qwen3-30b.yaml  qwen3-4b.yaml  qwen3-8b.yaml
docs/: BATCH-PROCESSING-QUICKREF.md  BATCH-PROCESSING.md  CI-CD.md  DEVELOPMENT-PLAN-20-POINTS.md  DEVELOPMENT-PLAN-PHASE-2.md  M3-MAX-OPTIMIZATION.md  agent-coordination-patterns.md  agent-tool-usage.md  error-recovery-patterns.md  langgraph-studio-guide.md  langsmith-integration.md  prompt-engineering-guide.md
docs/adr/: 001-local-first-architecture.md  002-langgraph-choice.md  003-mcp-protocol.md  004-vector-store-selection.md  005-state-management.md  006-apple-silicon-optimization.md  README.md
docs/api-reference/: index.md  mcp_client.md  ollama_manager.md  state_manager.md  tool_registry.md  vector_store.md
examples/: REQUIREMENTS.md  error_handling_demo.py  tool_registry_demo.py
examples/01-foundation/: batch_inference.py  compare_models.py  simple_chat.py  streaming_chat.py
examples/02-mcp/: README.md  combined_tools_agent.py  filesystem_agent.py  web_search_agent.py
examples/03-multi-agent/: README.md  code_review_pipeline.py  parallel_comparison.py  research_pipeline.py
examples/04-rag/: README.md  advanced_rag_reranking.py  codebase_search.py  document_qa.py  streaming_rag.py  vision_rag.py
examples/05-interpretability/: README.md  activation_patching.py  attention_visualization.ipynb  circuit_discovery.py
examples/06-production/: README.md  config_management.py  deployment_ready.py  monitoring_logging.py  production_agent.py
examples/07-advanced/: README.md  audio_transcription_agent.py  document_understanding.py  multimodal_rag.py  vision_agent.py
mcp-servers/custom/: __init__.py
mcp-servers/custom/filesystem/: __init__.py  server.py
mcp-servers/custom/web-search/: __init__.py  server.py
mcp-servers/custom/web_search/: server.py
mcp-servers/template/: .dockerignore  .gitignore  CHECKLIST.md  Dockerfile  MANIFEST.md  QUICKSTART.md  README.md  SETUP.md  TEMPLATE-SUMMARY.md  __init__.py  config.yaml  docker-compose.yml  requirements.txt  server.py
mcp-servers/template/tests/: __init__.py  test_server.py
mcp-servers/template/tools/: __init__.py  example_tool.py
plans/: 0-readme.md  1-research-plan.md  3-kitchen-sink-plan.md  SPRINT_1_EXECUTION.md  SPRINT_1_STATUS.md  original-convo-plan.md
plans/checklists/: daily-development-checklist.md  getting-started-checklist.md  remaining-tasks.md
plans/milestones/: milestone-1-foundation.md
scripts/: .gitignore  QUICKREF.md  README.md  benchmark.sh  clean.sh  compare_benchmarks.py  dev.sh  pull_models.sh  run_tests.sh  setup.sh  test-setup.sh  test-studio-setup.sh  validate.sh  verify-ci-setup.sh
src/: __init__.py
src/config/: __init__.py  loader.py
src/utils/: __init__.py  logging.py  retry.py
tests/: conftest.py  test_basic.py  test_batch_processing.py  test_error_recovery.py  test_mcp_client.py  test_ollama_manager.py  test_tool_registry.py  test_vector_store.py  validate_batch_api.py
tests/benchmarks/: README.md  __init__.py  agent_workflow_performance.py  benchmark_runner.py  model_performance.py  test_llm_performance.py  vector_store_performance.py
tests/integration/: QUICKSTART.md  README.md  TEST-SUMMARY.md  conftest.py  test_examples_run.py  test_mcp_integration.py  test_multi_agent_workflows.py  test_rag_pipeline.py
utils/: README.md  __init__.py  error_recovery.py  mcp_client.py  ollama_manager.py  state_manager.py  tool_registry.py  vector_store.py
workflows/: README.md  __init__.py  code_reviewer.py  rag_pipeline.py  research_agent.py
